ecmascript/parser/tests/test262-error-references/fail/7f9bbf314145e16f.js.stderr
error: Expected ,, got numeric literal
 --> $DIR/tests/test262-parser/fail/7f9bbf314145e16f.js:1:6
  |
1 | ({}=>0)
  |      ^

